# rust_web

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: config.rs  ctx.rs  error.rs  logs.rs  main.rs
src/examples/: quick_dev.rs
src/model/: model.rs
src/web/: mod.rs  mw_auth.rs  routes_login.rs  routes_static.rs  routes_tickets.rs
tests/: quick_dev.rs
