[package]
name = "web_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
# -- Async
tokio = { version = "1.46.1", features = ["full"]}
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.14.0"
# -- Web
axum = { version = "0.8.4", features = ["macros"]}
tower-http = { version = "0.6", features = ["fs"] }
tower-cookies = "0.11.0"
lazy-regex = "3"
strum_macros = "0.27.1"
uuid = {version = "1", features = ["v4","fast-rng",]}
anyhow = "1"
futures = "0.3.31"
[dev-dependencies]
httpc-test = "0.1.1"
